--- a/eas.json
+++ b/eas.json
@@ -11,6 +11,12 @@
     "preview": {
       "distribution": "internal"
     },
+      
+  "preview2": {
+      "android": {
+        "buildType": "apk"
+      }
+  },
     "production": {
       "autoIncrement": true
     }
